test(openapi): un gemello che parla il dialetto vero, e ha già trovato un difetto
Il corriere si avviava e i jar si caricavano, ma niente provava che parlasse la lingua di
openapi.it. Una finta avrebbe detto solo che il codice chiama i metodi attesi; un gemello
dice che manda le cose giuste — che è la differenza fra un test verde e un SMS che parte.

Il server è quello del JDK, così nell'intero progetto entra una dipendenza sola, JUnit, e
solo per questo modulo.

Cinque prove, e ognuna difende una cosa che costa:

- la chiave dell'account vive solo nel conio, in Basic, e non tocca mai l'API dei messaggi;
- lo scope del token nomina lo stesso host a cui si parla, o si prende «API not enabled»;
- il token si riusa finché vale: coniarne uno per messaggio raddoppierebbe le chiamate;
- un token che il fornitore rifiuta si butta, e il tentativo dopo ne conia un altro. Senza
  questo, ogni invio successivo fallirebbe allo stesso modo, per sempre;
- un rifiuto porta il codice che openapi.it mette nel **corpo**, non lo status: è quello che
  chi legge il log vuole.

E il gemello ha subito guadagnato la sua riga: usavo `URI.getHost()`, che perde la porta,
mentre l'adapter TypeScript — quello verificato contro l'API vera — manda l'autorità, porta
compresa. In produzione la porta non c'è e le due grafie coincidono, quindi il difetto
sarebbe rimasto invisibile fino al primo ambiente di prova. Corretto il codice, non il test.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>